# testbench2robotframework

./: .gitignore  CreatePiPWheel.bat  CreatePiPWheel.sh  DEVELOPMENT.md  MANIFEST.in  README.md  README_old.md  config.json  create_json_schema.py  oldModel.py  pydantic_model.py  pyproject.toml  requirements.txt  robot.toml  setup.cfg  tasks.py
ExampleConfiguration/: json_config.json  toml_config.toml
atest/json_config_tests/: 1_tfs.robot
atest/robot/libs/: json_config.py  pyproject_config.py
atest/robot/resources/: file_management.resource  testbench2robotframework_cli.resource
atest/robot/rf_tests/cli_interface/write/: json_config.robot  no_config_argument.robot  toml_config.robot
testbench2robotframework/: __init__.py  __main__.py  cli.py  config.py  execution_artifacts.py  html_parser.py  json_reader.py  json_writer.py  log.py  model.py  model_utils.py  result_writer.py  robot_run.py  robotframework2testbench.py  testbench2rf.py  testbench2robotframework.py  testsuite_write.py  utils.py
tests/: test_missing_files.py  test_robot_files_should_not_contain_invalid_characters.py  test_zip_file_generation.py
tests/test_data/configurations/: invalid_config.json  valid_config.json
