[metadata]
name = testbench2robotframework
author = imbus AG
author_email = support@imbus.de
version = attr: testbench2robotframework.__version__
description = Robot Framework Code Generator from Keyword-Driven Tests in imbus TestBench 3.0 and newer
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0 License
url = https://github.com/imbus/testbench2robotframework
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
install_requires =
    robotframework >= 4.0

[options.entry_points]
console_scripts =
    tb2robot = testbench2robotframework.__main__:run
    testbench2robotframework = testbench2robotframework.__main__:run

[options.extras_require]
dev =
    black
    flake8
    pylint
    mypy
    pytest
    pytest-cov
    pytest-spec
    check-manifest
    twine
    wheel
    setuptools

[options.packages.find]
exclude =
    tests
